--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "sass": "^1.36.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
